Agregar metadatos de Twitter Open Graph en index.html

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,17 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="es_ES" />
 
+    // twitter open graph
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@edualex" />
+    <meta name="twitter:creator" content="@edualex" />
+    <meta name="twitter:title" content="QR GEN" />
+    <meta
+      name="twitter:description"
+      content="Generador gratuito de Código QR para URLs"
+    />
+    <meta name="twitter:image" content="https://qr.edualex.uy/og.webp" />
+
     <title>Generador de QR | QR GEN</title>
     <style>
       :root {
