Actualizar rutas de imagen en metadatos de Open Graph y Twitter en index.html

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       property="og:description"
       content="Generador gratuito de Código QR para URLs"
     />
-    <meta property="og:image" content="https://qr.edualex.uy/og.webp" />
+    <meta property="og:image" content="./og.webp" />
     <meta property="og:url" content="https://qr.edualex.uy/" />
     <meta property="og:site_name" content="QR GEN" />
     <meta property="og:type" content="website" />
@@ -33,7 +33,7 @@
       name="twitter:description"
       content="Generador gratuito de Código QR para URLs"
     />
-    <meta name="twitter:image" content="https://qr.edualex.uy/og.webp" />
+    <meta name="twitter:image" content="./og.webp" />
 
     <title>Generador de QR | QR GEN</title>
     <style>
