--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <meta property="og:site_name" content="QR GEN" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="es_ES" />
-    
+
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@edualex" />
     <meta name="twitter:creator" content="@edualex" />
@@ -37,61 +37,15 @@
 
     <title>Generador de QR | QR GEN</title>
     <style>
-      :root {
-        --bg-color-light: #ffffff;
-        --text-color-light: #333333;
-        --bg-color-dark: #121212;
-        --text-color-dark: #ffffff;
-        --primary-color: #0078d4;
-        --input-bg-light: #f0f0f0;
-        --input-bg-dark: #1f1f1f;
-        --input-border-light: #cccccc;
-        --input-border-dark: #444444;
-        scrollbar-width: none;
-      }
-
-      @media (prefers-color-scheme: light) {
-        body {
-          background-color: var(--bg-color-light);
-          color: var(--text-color-light);
-          scrollbar-width: none;
-        }
-        input {
-          background-color: var(--input-bg-light);
-          border: 1px solid var(--input-border-light);
-          color: var(--text-color-light);
-        }
-        button {
-          background-color: var(--primary-color);
-          color: #ffffff;
-        }
-      }
-
-      @media (prefers-color-scheme: dark) {
-        body {
-          background-color: var(--bg-color-dark);
-          color: var(--text-color-dark);
-        }
-        input {
-          background-color: var(--input-bg-dark);
-          border: 1px solid var(--input-border-dark);
-          color: var(--text-color-dark);
-        }
-        button {
-          background-color: var(--primary-color);
-          color: #ffffff;
-        }
-      }
-
       body {
-        font-family: system-ui, "Arial", sans-serif;
+        font-family: "Arial", sans-serif;
         margin: 0;
         padding: 20px;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        min-height: 100vh;
+        min-height: 95vh;
         transition: background-color 0.3s, color 0.3s;
       }
 
@@ -103,31 +57,29 @@
       form {
         display: flex;
         flex-direction: column;
-        align-items: center;
         gap: 10px;
         width: 100%;
         max-width: 400px;
       }
 
-      input {
-        width: 100%;
+      input,
+      button {
         padding: 10px;
         font-size: 1rem;
+        border: 1px solid #ccc;
         border-radius: 5px;
-        transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+        transition: background-color 0.3s, border-color 0.3s;
       }
 
       button {
-        padding: 10px 20px;
-        font-size: 1rem;
+        background-color: #007bff;
+        color: white;
         border: none;
-        border-radius: 5px;
         cursor: pointer;
-        transition: background-color 0.3s, color 0.3s;
       }
 
       button:hover {
-        opacity: 0.9;
+        background-color: #0056b3;
       }
 
       #result {
@@ -138,20 +90,80 @@
       #qrCode {
         max-width: 100%;
         height: auto;
-        border: 1px solid transparent;
-        border-radius: 5px;
-        transition: border-color 0.3s;
+        margin-bottom: 10px;
       }
 
+      #downloadBtn {
+        text-decoration: none;
+      }
+
+      #downloadBtn button {
+        background-color: #28a745;
+      }
+
+      #downloadBtn button:hover {
+        background-color: #218838;
+      }
+
+      /* Modo Light (por defecto) */
       @media (prefers-color-scheme: light) {
-        #qrCode {
-          border-color: var(--input-border-light);
+        body {
+          background-color: #ffffff;
+          color: #000000;
+        }
+
+        input,
+        button {
+          background-color: #f9f9f9;
+          border-color: #ddd;
+        }
+
+        button {
+          background-color: #007bff;
+          color: white;
+        }
+
+        button:hover {
+          background-color: #0056b3;
+        }
+
+        #downloadBtn button {
+          background-color: #28a745;
+        }
+
+        #downloadBtn button:hover {
+          background-color: #218838;
         }
       }
 
+      /* Modo Dark */
       @media (prefers-color-scheme: dark) {
-        #qrCode {
-          border-color: var(--input-border-dark);
+        body {
+          background-color: #121212;
+          color: #ffffff;
+        }
+
+        input,
+        button {
+          background-color: #1e1e1e;
+          border-color: #333;
+          color: #ffffff;
+        }
+
+        button {
+          background-color: #1a73e8;
+        }
+
+        button:hover {
+          background-color: #1557b0;
+        }
+
+        #downloadBtn button {
+          background-color: #34a853;
+        }
+
+        #downloadBtn button:hover {
+          background-color: #2d8a4a;
         }
       }
     </style>
@@ -160,11 +172,18 @@
     <h1>QR GEN</h1>
     <form id="qrForm">
       <input
-        type="url"
-        id="urlInput"
-        placeholder="Ingresa una URL"
+        type="text"
+        id="textInput"
+        placeholder="Ingresa una URL o texto"
         autofocus
         required
+      />
+      <input
+        type="number"
+        id="sizeInput"
+        placeholder="Tamaño del QR (opcional)"
+        min="150"
+        max="1000"
       />
       <button type="submit">Generar QR</button>
     </form>
@@ -180,30 +199,32 @@
         .getElementById("qrForm")
         .addEventListener("submit", async (e) => {
           e.preventDefault();
-          const url = document.getElementById("urlInput").value;
+
+          const text = document.getElementById("textInput").value;
+          const size = document.getElementById("sizeInput").value;
 
           try {
             const response = await fetch("/api/generate.js", {
               method: "POST",
               headers: { "Content-Type": "application/json" },
-              body: JSON.stringify({ url }),
+              body: JSON.stringify({ text, size }),
             });
             const data = await response.json();
-            const qrCodeImage = document.getElementById("qrCode");
-            qrCodeImage.src = data.qrCode;
 
-            const downloadBtn = document.getElementById("downloadBtn");
-            downloadBtn.href = data.qrCode; 
-            downloadBtn.style.display = "block";
+            if (data.qrCode) {
+              const qrCodeImage = document.getElementById("qrCode");
+              qrCodeImage.src = data.qrCode;
+
+              const downloadBtn = document.getElementById("downloadBtn");
+              downloadBtn.href = data.qrCode;
+              downloadBtn.style.display = "block";
+            } else {
+              alert(data.error || "Error al generar el QR");
+            }
           } catch (err) {
             alert("Error al generar el QR");
           }
         });
     </script>
-    <script
-      defer
-      src="https://umami-production-50e0.up.railway.app/script.js"
-      data-website-id="151cd84f-545e-4e5c-af2e-c3126cc2a09f"
-    ></script>
   </body>
 </html>
