Agregar script de análisis de tráfico en index.html

--- a/public/index.html
+++ b/public/index.html
@@ -226,5 +226,10 @@
           }
         });
     </script>
+    <script
+      defer
+      src="https://umami-production-50e0.up.railway.app/script.js"
+      data-website-id="151cd84f-545e-4e5c-af2e-c3126cc2a09f"
+    ></script>
   </body>
 </html>
