--- a/public/index.html
+++ b/public/index.html
@@ -189,7 +189,7 @@
     </form>
     <div id="result">
       <img id="qrCode" alt="Código QR generado" />
-      <a id="downloadBtn" style="display: none" download="qrcode.png">
+      <a id="downloadBtn" style="display: none" download="codigoQR.png">
         <button>Descargar QR</button>
       </a>
     </div>
