--- a/public/index.html
+++ b/public/index.html
@@ -38,20 +38,55 @@
     <title>Generador de QR | QR GEN</title>
     <style>
       body {
-        font-family: "Arial", sans-serif;
+        font-family: system-ui, -apple-system, Ubuntu, Cantarell, "Open Sans",
+          "Helvetica Neue", sans-serif, sans-serif;
         margin: 0;
-        padding: 20px;
+        padding: 0;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        min-height: 100vh;
         justify-content: center;
-        min-height: 95vh;
-        transition: background-color 0.3s, color 0.3s;
       }
 
-      h1 {
-        font-size: 2rem;
+      main {
+        flex: 1;
+        padding: 80px;
+      }
+
+      .content {
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+        margin-top: 20vh;
+      }
+      .content header {
+        text-align: center;
+        font-family: Verdana, sans-serif;
+      }
+
+      .column {
+        flex: 1;
+        border-radius: 8px;
+      }
+      header h1 {
+        font-size: 5rem;
         margin-bottom: 20px;
+        margin-top: 0;
+      }
+      .column #qrForm {
+        padding: 20px;
+      }
+      footer {
+        text-align: center;
+        padding: 10px;
+        margin-top: auto;
+        & a {
+          color: #007bff;
+          text-decoration: none;
+          &:hover {
+            text-decoration: underline;
+          }
+        }
       }
 
       form {
@@ -60,6 +95,7 @@
         gap: 10px;
         width: 100%;
         max-width: 400px;
+        margin: auto;
       }
 
       input,
@@ -166,34 +202,64 @@
           background-color: #2d8a4a;
         }
       }
+
+      @media (max-width: 768px) {
+        .content {
+          flex-direction: column;
+          gap: 20px;
+          margin-top: 10vh;
+        }
+        header h1 {
+          font-size: 4rem;
+        }
+        header p {
+          font-size: 1.2rem;
+        }
+        main {
+          padding: 0;
+        }
+        #qrForm {
+          max-width: 340px;
+          padding: 0;
+          margin: auto;
+        }
+      }
     </style>
   </head>
   <body>
-    <h1>QR GEN</h1>
-    <form id="qrForm">
-      <input
-        type="text"
-        id="textInput"
-        placeholder="Ingresa una URL o texto"
-        autofocus
-        required
-      />
-      <input
-        type="number"
-        id="sizeInput"
-        placeholder="Tamaño del QR (opcional)"
-        min="150"
-        max="1000"
-      />
-      <button type="submit">Generar QR</button>
-    </form>
-    <div id="result">
-      <img id="qrCode" alt="Código QR generado" />
-      <a id="downloadBtn" style="display: none" download="codigoQR.png">
-        <button>Descargar QR</button>
-      </a>
-    </div>
-
+    <main>
+      <section class="content">
+        <header class="column">
+          <h1>QR GEN</h1>
+          <p>Genera QR desde url o texto</p>
+        </header>
+        <div class="column">
+          <form id="qrForm">
+            <input
+              type="text"
+              id="textInput"
+              placeholder="Ingresa una URL o texto"
+              autofocus
+              required
+            />
+            <input
+              type="number"
+              id="sizeInput"
+              placeholder="Tamaño del QR (opcional)"
+              min="150"
+              max="1000"
+            />
+            <button type="submit">Generar QR</button>
+          </form>
+          <div id="result">
+            <img id="qrCode" alt="Código QR generado" />
+            <a id="downloadBtn" style="display: none" download="codigoQR.png">
+              <button>Descargar QR</button>
+            </a>
+          </div>
+        </div>
+      </section>
+    </main>
     <script>
       document
         .getElementById("qrForm")
@@ -226,6 +292,12 @@
           }
         });
     </script>
+    <footer>
+      <p>
+        &copy; 2025 QR Gen by
+        <a href="https://edualex.uy" target="_blank">EduAlex</a>
+      </p>
+    </footer>
     <script
       defer
       src="https://umami-production-50e0.up.railway.app/script.js"
