--- a/public/index.html
+++ b/public/index.html
@@ -46,13 +46,13 @@
         flex-direction: column;
         min-height: 100vh;
         justify-content: center;
+        max-width: 1500px;
+        margin: auto;
       }
-
       main {
         flex: 1;
         padding: 80px;
       }
-
       .content {
         display: flex;
         flex-direction: row;
@@ -63,7 +63,6 @@
         text-align: center;
         font-family: Verdana, sans-serif;
       }
-
       .column {
         flex: 1;
         border-radius: 8px;
@@ -88,7 +87,6 @@
           }
         }
       }
-
       form {
         display: flex;
         flex-direction: column;
