Actualizar el estilo del encabezado en index.html para resaltar "QR" en color azul

--- a/public/index.html
+++ b/public/index.html
@@ -228,7 +228,7 @@
     <main>
       <section class="content">
         <header class="column">
-          <h1>QR GEN</h1>
+          <h1><span style="color: #007bff;">QR</span> GEN</h1>
           <p>Genera QR desde url o texto</p>
         </header>
         <div class="column">
