--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,9 @@
 
     <title>Generador de QR | QR GEN</title>
     <style>
+      html {
+        scrollbar-width: thin;
+      }
       body {
         font-family: system-ui, -apple-system, Ubuntu, Cantarell, "Open Sans",
           "Helvetica Neue", sans-serif, sans-serif;
@@ -141,6 +144,7 @@
       #toggleColorInputs {
         background-color: transparent;
         max-width: 60%;
+        font-size: 0.8rem;
         margin: auto;
         text-decoration: underline;
         color: white;
@@ -156,7 +160,43 @@
         height: 40px;
         padding: 2px;
       }
+      .loader {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 5px;
+      }
 
+      .loader div {
+        width: 10px;
+        height: 10px;
+        background-color: #007bff;
+        border-radius: 50%;
+        animation: loader-animation 1.2s infinite ease-in-out;
+      }
+
+      .loader div:nth-child(1) {
+        animation-delay: -0.24s;
+      }
+
+      .loader div:nth-child(2) {
+        animation-delay: -0.12s;
+      }
+
+      .loader div:nth-child(3) {
+        animation-delay: 0;
+      }
+
+      @keyframes loader-animation {
+        0%,
+        80%,
+        100% {
+          transform: scale(0);
+        }
+        40% {
+          transform: scale(1);
+        }
+      }
       /* Modo Light (por defecto) */
       @media (prefers-color-scheme: light) {
         body {
@@ -312,7 +352,7 @@
             <button type="submit">Generar QR</button>
           </form>
           <div id="result">
-            <img id="qrCode" alt="Código QR generado" />
+            <img id="qrCode" alt="" />
             <a id="downloadBtn" style="display: none" download="codigoQR.png">
               <button>Descargar QR</button>
             </a>
