Actualizar el nombre del archivo descargado del código QR a 'codigoQREduAlex.png'

--- a/public/index.html
+++ b/public/index.html
@@ -353,7 +353,11 @@
           </form>
           <div id="result">
             <img id="qrCode" alt="" />
-            <a id="downloadBtn" style="display: none" download="codigoQR.png">
+            <a
+              id="downloadBtn"
+              style="display: none"
+              download="codigoQREduAlex.png"
+            >
               <button>Descargar QR</button>
             </a>
           </div>
