Añadir atributo target="_blank" al enlace de Nano URL en el banner del formulario de generación de QR en index.html

--- a/public/index.html
+++ b/public/index.html
@@ -375,8 +375,9 @@
     <div id="banner" class="banner">
       <span id="closeBanner" class="close-btn">&times;</span>
       <p>
-        Primero acorta tu URL con <a href="https://short.uy">Nano URL</a> y
-        luego genera el QR con este generador.
+        Primero acorta tu URL con
+        <a href="https://short.uy" target="_blank">Nano URL</a> y luego genera
+        el QR con este generador.
       </p>
       <p>De esa forma podrás llevar un control de visitas o quitar acceso.</p>
     </div>
