Actualizar la ruta de la API de generación de QR en index.html

--- a/public/index.html
+++ b/public/index.html
@@ -404,7 +404,7 @@
             document.getElementById("backgroundColor").value;
 
           try {
-            const response = await fetch("/api/generate.js", {
+            const response = await fetch("/api/generate", {
               method: "POST",
               headers: { "Content-Type": "application/json" },
               body: JSON.stringify({ text, size, color, backgroundColor }),
